# treasure-hunt-wasm

./: Cargo.toml  LICENSE  README.md
src/: audio.rs  game.rs  lib.rs  map.rs  player.rs  renderer.rs  treasure.rs
www/: index.html  index.js  style.css
