[package]
name = "treasure-hunt-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61", features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Window",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "Performance",
    "KeyboardEvent",
    # 音频相关特性
    "AudioContext",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioDestinationNode",
    "AudioNode",
    "GainNode",
    "AudioParam",
    # Fetch API 相关特性
    "Response",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode"
]}
js-sys = "0.3.61"
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.34"
getrandom = { version = "0.2", features = ["js"] }
futures = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"